<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_Primary"
        android:icon="@drawable/personal"
        android:title="@string/nav_Primary" />
    <item
        android:id="@+id/nav_OTP"
        android:icon="@drawable/otp"
        android:title="@string/nav_OTP" />
    <item
        android:id="@+id/nav_Transactions"
        android:icon="@drawable/transactions"
        android:title="@string/nav_Transactions" />
    <item
        android:id="@+id/nav_Promotions"
        android:icon="@drawable/promotions"
        android:title="@string/nav_Promotions" />
    <item
        android:id="@+id/nav_Spams"
        android:icon="@drawable/spam"
        android:title="@string/nav_Spams" />
</menu>